@@ -55,7 +55,7 @@ Please see the [Updating and Maintaining DKAN](http://docs.getdkan.com/en/latest
 
 ## Releases
 
-Check the [releases page](https://github.com/NuCivic/dkan/releases) for latest DKAN Version. 7.x-1.x is the development branch.
+Check the [releases page](https://github.com/GetDKAN/dkan/releases) for latest DKAN Version. 7.x-1.x is the development branch.
 
 ### Releases and release candidates
 
@@ -71,7 +71,7 @@ _Patch_ releases, introduced after the release of DKAN 7.x-1.12, occur much more
 
 After a _point_ release comes out, we create a _release branch_, on which we do any work intended for future _patch_ releases on that version of DKAN. The _release branch_ for version 7.x-1.12 development, for instance, is `release-1-12`. New features and other work destined for the next _point release_ continues on the main development branch, `7.x-1.x`.
 
-We keep the DKAN profile (this project), [DKAN Dataset](https://github.com/NuCivic/dkan_dataset), [DKAN Datastore](https://github.com/NuCivic/dkan_datastore), [DKAN Workflow](https://github.com/NuCivic/dkan_workflow) and [Recline](https://github.com/NuCivic/recline) versioning in sync. Other depdendencies that we maintain, incuding [Open Data Schema Map](https://github.com/NuCivic/open_data_schema_map) and [Visualization Entity](https://github.com/NuCivic/visualization_entity) follow their own, separate release cycle.
+We keep the DKAN profile (this project), [DKAN Dataset](https://github.com/GetDKAN/dkan_dataset), [DKAN Datastore](https://github.com/GetDKAN/dkan_datastore), [DKAN Workflow](https://github.com/GetDKAN/dkan_workflow) and [Recline](https://github.com/GetDKAN/recline) versioning in sync. Other depdendencies that we maintain, incuding [Open Data Schema Map](https://github.com/GetDKAN/open_data_schema_map) and [Visualization Entity](https://github.com/GetDKAN/visualization_entity) follow their own, separate release cycle.
 
 ## License
 
@@ -79,9 +79,9 @@ DKAN and related modules are freely-available under the [ GPLv2 (or later) ](htt
 
 ## Contributing
 
-Please file all tickets for DKAN [in this issue queue](https://github.com/NuCivic/dkan/issues). We have several labels in place for you to tag the issue with and identify it with the proper component.
+Please file all tickets for DKAN [in this issue queue](https://github.com/GetDKAN/dkan/issues). We have several labels in place for you to tag the issue with and identify it with the proper component.
 
-Please follow the [Ticket Template](https://github.com/NuCivic/dkan/blob/7.x-1.x/.github/CONTRIBUTING.md#new-feature-template) when creating new tickets.
+Please follow the [Ticket Template](https://github.com/GetDKAN/dkan/blob/7.x-1.x/.github/CONTRIBUTING.md#new-feature-template) when creating new tickets.
 
 Also, please remember to reference the issue across repositories in order for maintainers to pick up commits and pull requests looking at the issue. You can do that for commits like this:
 
