@@ -212,7 +212,7 @@ source_parsers = {
     '.md': CommonMarkParser,
 }
 
-github_doc_root = 'https://github.com/NuCivic/dkan/tree/rtd/docs/'
+github_doc_root = 'https://github.com/GetDKAN/dkan/tree/rtd/docs/'
 def setup(app):
     app.add_config_value('recommonmark_config', {
             'url_resolver': lambda url: github_doc_root + url,
